# ml_predict_taxi_fares

./: README.md  main.py  pyproject.toml
data/: clean_taxi_data.csv
eda/: build_model.ipynb  eda.ipynb
