[project]
name = "ml-predict-taxi-fares"
version = "0.1.0"
description = "Predict the Fare of a Taxi Ride in Chicago, Illinois"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
]
